package lab9.task1;


public abstract class Shape {

  protected int x;
  protected int y;

  protected DrawingService draw;

  public Shape(int x, int y) {
    this.x = x;
    this.y = y;
    this.draw = new WrapMonitor();
  }

  public abstract void draw();

  public void setDrawingService(DrawingService draw) {
    this.draw = draw;
  }

}
